Page content consists of a page heading and 3 sections

--- a/course2-solution/index.html
+++ b/course2-solution/index.html
@@ -6,6 +6,32 @@
     <title>Responsive layout</title>
 </head>
 <body>
-<h1>Responsive site</h1>
+<div class="heading">
+    <h1>Responsive site</h1>
+</div>
+<div class="container">
+    <div id="section1">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Donec semper, lectus a ornare laoreet, magna magna venenatis massa,
+            sed blandit eros lacus eget nisl. Cras at diam id purus efficitur venenatis.
+            Proin sed lacinia lorem. Curabitur venenatis ornare turpis sed maximus. In ut est dolor.
+            Sed scelerisque varius eros, et laoreet ex lacinia in. Quisque in vehicula nisi. </p>
+    </div>
+    <div id="section2">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Donec semper, lectus a ornare laoreet, magna magna venenatis massa,
+            sed blandit eros lacus eget nisl. Cras at diam id purus efficitur venenatis.
+            Proin sed lacinia lorem. Curabitur venenatis ornare turpis sed maximus. In ut est dolor.
+            Sed scelerisque varius eros, et laoreet ex lacinia in. Quisque in vehicula nisi. </p>
+    </div>
+    <div id="section3">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Donec semper, lectus a ornare laoreet, magna magna venenatis massa,
+            sed blandit eros lacus eget nisl. Cras at diam id purus efficitur venenatis.
+            Proin sed lacinia lorem. Curabitur venenatis ornare turpis sed maximus. In ut est dolor.
+            Sed scelerisque varius eros, et laoreet ex lacinia in. Quisque in vehicula nisi. </p>
+    </div>
+</div>
+
 </body>
 </html>
