In mobile layout, each section takes the entire row

--- a/course2-solution/index.html
+++ b/course2-solution/index.html
@@ -10,21 +10,21 @@
     <h1>Responsive site</h1>
 </div>
 <div class="container">
-    <div id="section1" class="col-desk-4 col-tabl-6">
+    <div id="section1" class="col-desk-4 col-tabl-6 col-mobi-12">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Donec semper, lectus a ornare laoreet, magna magna venenatis massa,
             sed blandit eros lacus eget nisl. Cras at diam id purus efficitur venenatis.
             Proin sed lacinia lorem. Curabitur venenatis ornare turpis sed maximus. In ut est dolor.
             Sed scelerisque varius eros, et laoreet ex lacinia in. Quisque in vehicula nisi. </p>
     </div>
-    <div id="section2" class="col-desk-4 col-tabl-6">
+    <div id="section2" class="col-desk-4 col-tabl-6 col-mobi-12">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Donec semper, lectus a ornare laoreet, magna magna venenatis massa,
             sed blandit eros lacus eget nisl. Cras at diam id purus efficitur venenatis.
             Proin sed lacinia lorem. Curabitur venenatis ornare turpis sed maximus. In ut est dolor.
             Sed scelerisque varius eros, et laoreet ex lacinia in. Quisque in vehicula nisi. </p>
     </div>
-    <div id="section3" class="col-desk-4 col-tabl-12">
+    <div id="section3" class="col-desk-4 col-tabl-12 col-mobi-12">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Donec semper, lectus a ornare laoreet, magna magna venenatis massa,
             sed blandit eros lacus eget nisl. Cras at diam id purus efficitur venenatis.
