Giving margins between sections

--- a/course2-solution/index.html
+++ b/course2-solution/index.html
@@ -11,26 +11,33 @@
 </div>
 <div class="container">
     <div id="section1" class="col-desk-4 col-tabl-6 col-mobi-12">
-        <div class="anchor">
-            <div id="section1-title" class="section-title">Chicken</div>
+        <div class="section-content">
+            <div class="anchor">
+                <div id="section1-title" class="section-title">Chicken</div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Donec semper, lectus a ornare laoreet, magna magna venenatis massa,
+                sed blandit eros lacus eget nisl. Cras at diam id purus efficitur venenatis.
+                Proin sed lacinia lorem. Curabitur venenatis ornare turpis sed maximus. In ut est dolor.
+                Sed scelerisque varius eros, et laoreet ex lacinia in. Quisque in vehicula nisi.
+            </p>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Donec semper, lectus a ornare laoreet, magna magna venenatis massa,
-            sed blandit eros lacus eget nisl. Cras at diam id purus efficitur venenatis.
-            Proin sed lacinia lorem. Curabitur venenatis ornare turpis sed maximus. In ut est dolor.
-            Sed scelerisque varius eros, et laoreet ex lacinia in. Quisque in vehicula nisi. </p>
     </div>
     <div id="section2" class="col-desk-4 col-tabl-6 col-mobi-12">
-        <div class="anchor">
-            <div id="section2-title" class="section-title">Beef</div>
+        <div class="section-content">
+            <div class="anchor">
+                <div id="section2-title" class="section-title">Beef</div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Donec semper, lectus a ornare laoreet, magna magna venenatis massa,
+                sed blandit eros lacus eget nisl. Cras at diam id purus efficitur venenatis.
+                Proin sed lacinia lorem. Curabitur venenatis ornare turpis sed maximus. In ut est dolor.
+                Sed scelerisque varius eros, et laoreet ex lacinia in. Quisque in vehicula nisi.
+            </p>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Donec semper, lectus a ornare laoreet, magna magna venenatis massa,
-            sed blandit eros lacus eget nisl. Cras at diam id purus efficitur venenatis.
-            Proin sed lacinia lorem. Curabitur venenatis ornare turpis sed maximus. In ut est dolor.
-            Sed scelerisque varius eros, et laoreet ex lacinia in. Quisque in vehicula nisi. </p>
     </div>
     <div id="section3" class="col-desk-4 col-tabl-12 col-mobi-12">
+        <div class="section-content">
         <div class="anchor">
             <div id="section3-title" class="section-title">Sushi</div>
         </div>
@@ -38,7 +45,9 @@
             Donec semper, lectus a ornare laoreet, magna magna venenatis massa,
             sed blandit eros lacus eget nisl. Cras at diam id purus efficitur venenatis.
             Proin sed lacinia lorem. Curabitur venenatis ornare turpis sed maximus. In ut est dolor.
-            Sed scelerisque varius eros, et laoreet ex lacinia in. Quisque in vehicula nisi. </p>
+            Sed scelerisque varius eros, et laoreet ex lacinia in. Quisque in vehicula nisi.
+        </p>
+        </div>
     </div>
 </div>
 
