--- a/course2-solution/index.html
+++ b/course2-solution/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    <title>Responsive layout</title>
+    <title>Menu</title>
 </head>
 <body>
 <div class="heading">
-    <h1>Responsive site</h1>
+    <h1>Our menu</h1>
 </div>
 <div class="container">
     <div id="section1" class="col-desk-4 col-tabl-6 col-mobi-12">
