--- a/course5-solution/index.html
+++ b/course5-solution/index.html
@@ -71,7 +71,9 @@
   </div>
   <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
 
+  <!-- MAIN CONTENT -->
   <div id="main-content" class="container"></div>
+  <!-- END MAIN CONTENT -->
 
   <footer class="panel-footer">
     <div class="container">
