--- a/course4-solution/index.html
+++ b/course4-solution/index.html
@@ -11,6 +11,6 @@
   <script src="script.js"></script> 
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <h1>Look at the Javascript console to see the output of the program!</h1>
 </body>
 </html>
